# factory-automation

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AI_INTEGRATION_GUIDE.md  API_SETUP_GUIDE.md  BEST_PRACTICES_IMPLEMENTATION.md  CLAUDE.md  CONFIGURATION_GUIDE.md  DUPLICATE_FIX.md  FINAL_DUPLICATE_FIX.md  HUMAN_REVIEW_FIX.md  MIGRATION_GUIDE.md  Makefile  NEXT_STEPS_SUMMARY.md  OPEN_REVIEW_FIX.md  RAG_SCALABILITY_PLAN.md  README.md  ROADMAP_PROGRESS_REPORT.md  SAFARI_FIX.md  TESTING_INSTRUCTIONS.md  agentic_example_flow.md  analyze_excel.py  analyze_excel_data_loss.py  analyze_image_data.py  check_all_sheet2.py  check_database_reviews.py  check_merged_cells.py  check_port.py  check_review_history.py  config.yaml  create_review_decisions_table.py  create_sample_inventory.py  create_sample_inventory_simple.py  create_test_review.py  debug_ai_with_pdb.py  debug_human_interaction.py  debug_inventory_match.py  debug_open_review.py  debug_review.py  (+70 more)
.claude/: settings.local.json
.githooks/: pre-commit
factory_automation/: .env.example  __init__.py  main.py  pyproject.toml  requirements.txt
factory_automation/.claude/: settings.local.json
factory_automation/agents/: base.py  email_monitor.py  inventory_matcher.py  orchestrator.py  orchestrator_v2.py  order_interpreter.py
factory_automation/config/: settings.py
factory_automation/database/: models.py
factory_automation/factory_agents/: ai_bridge.py  ai_bridge_debug.py  base.py  design_review_agent.py  email_monitor_agent.py  excel_image_extractor.py  excel_with_images_processor.py  generate_clip_embeddings.py  gmail_agent.py  gmail_agent_enhanced.py  gmail_production_agent.py  human_interaction_manager.py  image_processor_agent.py  inventory_matcher_agent.py  inventory_rag_agent.py  inventory_rag_agent_v2.py  inventory_reconciliation_agent.py  mock_gmail_agent.py  orchestrator_agent.py  orchestrator_production.py  orchestrator_v2_agent.py  orchestrator_v3_agentic.py  orchestrator_v3_simple.py  orchestrator_v3_tracked.py  orchestrator_with_human.py  order_interpreter_agent.py  order_processor_agent.py  update_tag_names.py  visual_similarity_search.py
factory_automation/factory_config/: settings.py
factory_automation/factory_database/: connection.py  image_storage.py  models.py  run_migration.py  vector_db.py
factory_automation/factory_database/migrations/: add_recommendation_queue_tables.sql  fix_recommendation_queue_fk.sql
factory_automation/factory_models/: __init__.py  ai_extraction_models.py  order_models.py
factory_automation/factory_rag/: chromadb_client.py  deduplication_manager.py  embeddings_config.py  enhanced_search.py  excel_ingestion.py  intelligent_excel_ingestion.py  intelligent_excel_parser.py  multi_format_ingestion.py  multimodal_search.py  reranker.py
factory_automation/factory_tests/: test_ai_extraction.py  test_api_keys.py  test_chromadb.py  test_chromadb_sync.py  test_cleanup.py  test_complete_workflow.py  test_database.py  test_direct_extraction.py  test_email_attachments.py  test_email_extraction.py  test_email_to_inventory_flow.py  test_email_to_inventory_simple.py  test_email_to_inventory_with_agents.py  test_enhanced_excel_ingestion.py  test_gmail_simple.py  test_human_interaction.py  test_human_review_debug.py  test_human_review_simple.py  test_human_with_logging.py  test_image_association.py  test_image_matching_confidence.py  test_integration.py  test_interactive.py  test_orchestrator.py  test_orchestrator_basic.py  test_order_inventory_demo.py  test_queue_system.py  test_quick_search.py  test_run_script.py  test_stock_fix.py  test_system.py  test_ui_accessibility.py  test_ui_interaction.py  test_visual_similarity_search.py
factory_automation/factory_ui/: design_review.py  design_review_findings.json  design_review_report.md  gradio_app.py  gradio_app_ai.py  gradio_app_live.py  human_review_dashboard.py  human_review_interface.py  human_review_interface_improved.py  image_display_helper.py  trace_dashboard.py  ui_review_20250818_214245.json  visual_regression.py
factory_automation/factory_utils/: comparison_logger.py  logging_config.py  performance_monitor.py  trace_monitor.py
factory_automation/rag/: chromadb_client.py  multimodal_search.py
factory_automation/ui/: gradio_app.py
factory_automation/utils/: comparison_logger.py
(+107 files in other folders)
