[project]
name = "factory-automation"
version = "0.1.0"
description = "Garment price tag factory automation system"
requires-python = ">=3.9"
dependencies = [
    # Core dependencies
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "gradio>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    
    # Email processing
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
    
    # ML/AI tools
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "Pillow>=10.0.0",
    "litellm>=1.0.0",
    "clip-by-openai>=1.0.0",
    
    # OCR
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    
    # Data processing
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "numpy>=1.24.0",
    
    # API framework
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    
    # Utils
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.24.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "rag", "utils", "database", "ui", "config"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ["py39"]